--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,9 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{{ title }} | Saleor{% endblock %}
+{% block title %}{{ title }} | GALLANT{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Saleor Admin</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">GALLANT Admin</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
