--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 <html lang="en" class="no-js">
     <head>
-        <title>{% block title %}Saleor{% endblock %}</title>
+        <title>{% block title %}GALLANT{% endblock %}</title>
         {% block meta %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/">Saleor</a>
+                        <a class="navbar-brand" href="/">GALLANT</a>
                     </div>
                     <div class="collapse navbar-collapse navbar-ex1-collapse">
                         <ul class="nav navbar-nav">
@@ -125,7 +125,7 @@
             <footer>
                 <div class="container">
                     <p class="pull-right">
-                        &copy; Mirumee Software 2015
+                        GALLANT 2015
                     </p>
                 </div>
             </footer>
