--- a/saleor/dashboard/templates/dashboard/product/variant_form.html
+++ b/saleor/dashboard/templates/dashboard/product/variant_form.html
@@ -40,23 +40,23 @@
         <input type="hidden" name="success_url" value="{% url 'dashboard:product-update' pk=product.pk %}#variants">
         <div class="row">
             <div class="col s12 m6 l4">
-                {% if attribute_form.fields %}
-                    <div class="row">
-                        {% for attribute_field in attribute_form %}
-                            {{ attribute_field|materializecss }}
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    <p>{% trans "This product has no attributes." %}</p>
-                {% endif %}
+                {{ form.name|materializecss }}
+                {{ form.sku|materializecss }}
             </div>
 
             <div class="col s12 m6 l4">
                 <div class="row">
-                    {{ form.sku|materializecss }}
                     {{ form.price_override|materializecss }}
-                    {{ form.weight_override|materializecss }}
-                    {{ form.name|materializecss }}
+                    {% if attribute_form.fields %}
+                        <div class="row">
+                            {% for attribute_field in attribute_form %}
+                                {{ attribute_field|materializecss }}
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        <p>{% trans "This product has no attributes." %}</p>
+                    {% endif %}
+                    {# form.weight_override|materializecss #}
                 </div>
             </div>
         </div>
