--- a/saleor/checkout/templates/checkout/billing.html
+++ b/saleor/checkout/templates/checkout/billing.html
@@ -17,6 +17,7 @@
 {% endblock %}
 
 {% block fields %}
+    {{ step.forms.address.phone|as_vertical_form }}
     {{ step.forms.address.first_name|as_vertical_form }}
     {{ step.forms.address.last_name|as_vertical_form }}
     {% if not user.is_authenticated %}
@@ -27,9 +28,8 @@
     {{ step.forms.address.street_address_2|as_vertical_form }}
     {{ step.forms.address.city|as_vertical_form }}
     {{ step.forms.address.postal_code|as_vertical_form }}
-    {{ step.forms.address.country|as_vertical_form }}
-    {{ step.forms.address.country_area|as_vertical_form }}
-    {{ step.forms.address.phone|as_vertical_form }}
+    {# step.forms.address.country|as_vertical_form #}
+    {# step.forms.address.country_area|as_vertical_form #}
 {% endblock fields %}
 
 {% block form_submit %}
