--- a/saleor/userprofile/templates/userprofile/snippets/address-details.html
+++ b/saleor/userprofile/templates/userprofile/snippets/address-details.html
@@ -1,8 +1,9 @@
-<strong>{{ address.first_name }} {{ address.last_name }}</strong><br>
+<strong>{{ address.phone }}</strong><br>
+{{ address.first_name }} {{ address.last_name }}<br>
 {{ address.street_address_1 }}<br>
 {% if address.street_address_2 %}
     {{ address.street_address_2 }}<br>
 {% endif %}
-{{ address.postal_code }} {{ address.city }}<br>
-{% if address.country_area %}{{ address.country_area }}, {% endif %}{{ address.get_country_display }}<br>
-{{ address.phone }}
+{{ address.city }} {{ address.postal_code }}<br>
+<!-- {% if address.country_area %}{{ address.country_area }}, {% endif %}{{ address.get_country_display }}<br> -->
+
