--- a/saleor/product/templates/category/_items.html
+++ b/saleor/product/templates/category/_items.html
@@ -5,32 +5,30 @@
 
 {% for product in products %}
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" itemscope itemtype="https://schema.org/Product">
-        <div class="panel panel-default text-center">
-            <div class="panel-body">
-                <a itemprop="url" href="{{ product.get_absolute_url }}">
-                    {% if product.images.first %}
-                        <img itemprop="image" class="img-responsive" src="{{ product.images.first.image.crop.400x400 }}" alt="">
-                    {% else %}
-                        <img src="{% static 'images/product-image-placeholder.png' %}" alt="" class="img-responsive">
-                    {% endif %}
-                    <span class="product-list-item-name" itemprop="name" title="{{ product }}">{{ product }}</span>
-                </a>
-            </div>
-
-            <div class="panel-footer">
-                {% if product.is_in_stock %}
-                    {% with price_range=product|discounted_price_range:request.discounts undiscounted=product.get_price_range %}
-                        {% with discount=undiscounted.min_price|price_difference:price_range.min_price %}
-                            {% price_range price_range %}
-                            {% if undiscounted.min_price != price_range.min_price %}
-                                <span class="label label-success">{% trans "Discount!" %}</span>
-                            {% endif %}
-                        {% endwith %}
-                    {% endwith %}
+        <div class="thumbnail">
+            <a itemprop="url" href="{{ product.get_absolute_url }}">
+                {% if product.images.first %}
+                    <img itemprop="image" class="img-responsive" src="{{ product.images.first.image.crop.400x400 }}" alt="">
                 {% else %}
-                    &nbsp;
+                    <img src="{% static 'images/product-image-placeholder.png' %}" alt="" class="img-responsive">
                 {% endif %}
-            </div>
+                </span>
+            </a>
+          <div class="caption">
+            <h3 class="text-center" itemprop="name" title="{{ product }}">{{ product }}</h3>
+            {% if product.is_in_stock %}
+                {% with price_range=product|discounted_price_range:request.discounts undiscounted=product.get_price_range %}
+                    {% with discount=undiscounted.min_price|price_difference:price_range.min_price %}
+                        <p class="text-center"><a itemprop="url" href="{{ product.get_absolute_url }}" class="btn btn-primary" role="button">Starting at {% price_range price_range %}</a></p>
+                        {% if undiscounted.min_price != price_range.min_price %}
+                            <span class="label label-success">{% trans "Discount!" %}</span>
+                        {% endif %}
+                    {% endwith %}
+                {% endwith %}
+            {% else %}
+                &nbsp;
+            {% endif %}
+          </div>
         </div>
     </div>
 {% endfor %}
