--- a/saleor/registration/templates/registration/change_password.html
+++ b/saleor/registration/templates/registration/change_password.html
@@ -11,6 +11,25 @@
 {% endblock breadcrumb %}
 
 {% block content %}
+
+{% if user.is_authenticated %}
+    <div class="page-header">
+      <h1><i class="glyphicon glyphicon-user"></i> {{ user }} <small>Change password</small></h1>
+    </div>
+
+    <ul class="nav nav-pills">
+      <li role="presentation"><a href="{% url "profile:details" %}">{% trans "Addresses" %}</a></li>
+      <li role="presentation"><a href="{% url 'profile:orders' %}">{% trans "Orders" %}</a></li>
+      <li role="presentation"><a href="{% url 'registration:request_email_change' %}">{% trans 'Change your email' %}</a></li>
+      <li role="presentation" class="active"><a href="{% url 'registration:change_password' %}">{% trans 'Change your password' %}</a></li>
+        {% if user.is_staff %}
+        <li role="presentation"><a href="{% url "dashboard:index" %}">{% trans "Dashboard" %}</a></li> 
+        {% endif %}
+      <li role="presentation" class="pull-right"><a href="{% url "registration:logout" %}">{% trans "Log out" %}</a></li>
+    </ul>
+
+    <br>
+{% endif %}
 <div class="row">
     <div class="col-sm-6">
         <div class="panel panel-default">
