--- a/templates/base.html
+++ b/templates/base.html
@@ -106,9 +106,9 @@
                 <div class="col-sm-12">
                     {% block content %}
                         <div class="jumbotron">
-                          <h1>Hello, world!</h1>
+                          <h1>Flowers On Demand</h1>
                           <p>...</p>
-                          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+                          <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more</a></p>
                         </div>
                         <div class="row">
                             {% include "category/_items.html" %}
