--- a/saleor/dashboard/templates/dashboard/product/variant_form.html
+++ b/saleor/dashboard/templates/dashboard/product/variant_form.html
@@ -42,6 +42,8 @@
             <div class="col s12 m6 l4">
                 {{ form.name|materializecss }}
                 {{ form.sku|materializecss }}
+                {{ form.is_delivery_required|materializecss }}
+                {{ form.is_shipping_required|materializecss }}
             </div>
 
             <div class="col s12 m6 l4">
