--- a/saleor/checkout/templates/checkout/summary.html
+++ b/saleor/checkout/templates/checkout/summary.html
@@ -6,6 +6,40 @@
 
 {% block forms %}
     <div class="row">
+        {% if checkout.is_shipping_required %}
+        <div class="col-sm-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    {% trans "Shipping address" %}
+                </div>
+                <div class="panel-body">
+                    {% if checkout.shipping_address %}
+                        <address>{% include "userprofile/snippets/address-details.html" with address=checkout.shipping_address %}</address>
+                    {% else %}
+                        <p class="text-danger">{% trans "No address given yet." %}</p>
+                    {% endif %}
+                    <p><a href="{{ checkout.shipping.get_absolute_url }}">{% trans "Edit shipping details" %}</a></p>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        {% if checkout.is_delivery_required %}
+        <div class="col-sm-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    {% trans "Delivery address" %}
+                </div>
+                <div class="panel-body">
+                    {% if checkout.delivery_address %}
+                        <address>{% include "userprofile/snippets/address-details.html" with address=checkout.delivery_address %}</address>
+                    {% else %}
+                        <p class="text-danger">{% trans "No address given yet." %}</p>
+                    {% endif %}
+                    <p><a href="{{ checkout.delivery.get_absolute_url }}">{% trans "Edit delivery details" %}</a></p>
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <div class="col-sm-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -21,40 +55,6 @@
                 </div>
             </div>
         </div>
-        {% if checkout.is_shipping_required %}
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        {% trans "Shipping address" %}
-                    </div>
-                    <div class="panel-body">
-                        {% if checkout.shipping_address %}
-                            <address>{% include "userprofile/snippets/address-details.html" with address=checkout.shipping_address %}</address>
-                        {% else %}
-                            <p class="text-danger">{% trans "No address given yet." %}</p>
-                        {% endif %}
-                        <p><a href="{{ checkout.shipping.get_absolute_url }}">{% trans "Edit shipping details" %}</a></p>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-        {% if checkout.is_delivery_required %}
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        {% trans "Delivery address" %}
-                    </div>
-                    <div class="panel-body">
-                        {% if checkout.delivery_address %}
-                            <address>{% include "userprofile/snippets/address-details.html" with address=checkout.delivery_address %}</address>
-                        {% else %}
-                            <p class="text-danger">{% trans "No address given yet." %}</p>
-                        {% endif %}
-                        <p><a href="{{ checkout.delivery.get_absolute_url }}">{% trans "Edit shipping details" %}</a></p>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
     </div>
 
     {% for shipping, shipping_cost, total_with_shipping in checkout.get_shippings %}
