--- a/saleor/checkout/templates/checkout/billing.html
+++ b/saleor/checkout/templates/checkout/billing.html
@@ -17,19 +17,22 @@
 {% endblock %}
 
 {% block fields %}
-    {% if not user.is_authenticated %}
-        {{ step.forms.anonymous|as_vertical_form }}
-    {% endif %}
-    {{ step.forms.address.phone|as_vertical_form }}
-    {{ step.forms.address.first_name|as_vertical_form }}
-    {{ step.forms.address.last_name|as_vertical_form }}
-    {{ step.forms.address.company_name|as_vertical_form }}
-    {{ step.forms.address.street_address_1|as_vertical_form }}
-    {{ step.forms.address.street_address_2|as_vertical_form }}
-    {{ step.forms.address.city|as_vertical_form }}
-    {{ step.forms.address.postal_code|as_vertical_form }}
-    {# step.forms.address.country|as_vertical_form #}
-    {# step.forms.address.country_area|as_vertical_form #}
+    <div id="form-full-toggle" data-label="{% trans "Same as delivery address" %}"></div>
+    <div class="form-full">
+        {% if not user.is_authenticated %}
+            {{ step.forms.anonymous|as_vertical_form }}
+        {% endif %}
+        {{ step.forms.address.phone|as_vertical_form }}
+        {{ step.forms.address.first_name|as_vertical_form }}
+        {{ step.forms.address.last_name|as_vertical_form }}
+        {{ step.forms.address.company_name|as_vertical_form }}
+        {{ step.forms.address.street_address_1|as_vertical_form }}
+        {{ step.forms.address.street_address_2|as_vertical_form }}
+        {{ step.forms.address.city|as_vertical_form }}
+        {{ step.forms.address.postal_code|as_vertical_form }}
+        {# step.forms.address.country|as_vertical_form #}
+        {# step.forms.address.country_area|as_vertical_form #}
+    </div>
 {% endblock fields %}
 
 {% block form_submit %}
