--- a/saleor/checkout/templates/checkout/delivery_time.html
+++ b/saleor/checkout/templates/checkout/delivery_time.html
@@ -1,4 +1,7 @@
 {% extends "checkout/address.html" %}
+
+
+
 {% load as_horizontal_form from bootstrap %}
 {% load as_vertical_form from bootstrap %}
 {% load gross from prices_i18n %}
@@ -18,7 +21,20 @@
 {% endblock %}
 
 {% block fields %}
-    {{ delivery_time_form }}
+<!--     {{ delivery_time_form }} -->
+<label for="id_delivery_time_0">Delivery time:</label>
+
+<ul id="id_delivery_time">
+{% for choice in delivery_time_form.delivery_time %}
+    <li>
+        <label for="{{choice.id_for_label}}">
+            {{ choice.tag }}
+            <i></i> <span>{{ choice.choice_label }}</span>
+        </label>
+    </li>
+{% endfor %}
+</ul>
+
 {% endblock fields %}
 
 {% block form_submit %}
