--- a/saleor/checkout/templates/checkout/delivery_time.html
+++ b/saleor/checkout/templates/checkout/delivery_time.html
@@ -1,6 +1,6 @@
 {% extends "checkout/address.html" %}
 
-
+{% block stylesheet %}{{ block.super }}<link rel="stylesheet" type="text/css" href="/static/css/radio.css">{% endblock %}
 
 {% load as_horizontal_form from bootstrap %}
 {% load as_vertical_form from bootstrap %}
