callout css for login notice

--- a/saleor/checkout/templates/checkout/billing.html
+++ b/saleor/checkout/templates/checkout/billing.html
@@ -3,17 +3,19 @@
 {% load as_vertical_form from bootstrap %}
 {% load i18n %}
 
-{% block use_this_address %}
-    <button type="submit" class="btn {% if entry.is_selected %}btn-primary{% else %}btn-default{% endif %} btn-lg col-sm-12">{% trans "Bill to this address" %}</button>
-{% endblock %}
-
 {% block additional_message %}
     {% if not user.is_authenticated %}
-        <p class="alert alert-info">
-            {% trans "Already have an account?" %}
-            <a href="{% url "registration:login" %}?next={% url "checkout:details" step="billing-address" %}">{% trans "Log in" %}</a>
-        </p>
+        <a href="{% url "registration:login" %}?next={% url "checkout:details" step="billing-address" %}">
+        <div class="bs-callout bs-callout-info">
+          <h4>{% trans "Already have an account?" %}</h4>
+          {% trans "Log in" %}
+        </div>
+        </a>
     {% endif %}
+{% endblock %}
+
+{% block use_this_address %}
+    <button type="submit" class="btn {% if entry.is_selected %}btn-primary{% else %}btn-default{% endif %} btn-lg col-sm-12">{% trans "Bill to this address" %}</button>
 {% endblock %}
 
 {% block fields %}
