--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
         <script src="{% static "js/storefront_head.js" %}"></script>
         <link rel="stylesheet" type="text/css" href="{% static "css/storefront.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/callouts.css" %}">
 
         {% block stylesheet %}{% endblock stylesheet %}
 
