--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <script src="{% static "js/storefront_head.js" %}"></script>
         <link rel="stylesheet" type="text/css" href="{% static "css/storefront.css" %}">
         <link rel="stylesheet" type="text/css" href="{% static "css/callouts.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/ghostbtn.css" %}">
 
         {% block stylesheet %}{% endblock stylesheet %}
 
